libs/@local/hashql/hir/tests/ui/lower/checking/ctor-bounded-invalid.jsonc
//@ run: fail
//@ description: Checks that type constructor bounded generic parameter (T: Number) violation is caught during type checking.
["newtype", "Person<T: Number>", "T", ["Person", { "#literal": "2" }]]
//~^ ERROR Type variable has incompatible upper and lower bounds
